fixed footer and icon alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,6 @@ main {
 .right-side-col {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 60%;
 }
 
@@ -109,6 +108,7 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 5%;
+    margin-left: 15%;
     width: 70%;
 }
 
@@ -125,8 +125,8 @@ p {
     padding: 1%;
     width: 100%;
     background-color: var(--card-header);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
 }
 
 .main-project-icons, .grid-project-icons {
@@ -150,8 +150,8 @@ p {
 .screenshot-link img {
     height: 100%;
     width: 100%;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 24px;
+    border-bottom-right-radius: 24px;
 }
 
 .screenshot-link img:hover {
